fix(frontend): meeting buttons overlap ml-390 (#391)

--- a/apps/frontend/src/pages/meetings/components/meeting-item/styles.module.css
+++ b/apps/frontend/src/pages/meetings/components/meeting-item/styles.module.css
@@ -130,6 +130,7 @@
 
 @media (width <= 992px) {
 	.menu__container {
+		z-index: 0;
 		visibility: visible;
 		opacity: 1;
 	}
